--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,7 @@
   &__text {
     padding: 16rem 18rem;
     margin: 0 auto;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 
 
     @include respond(tab) {
